# project_name

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  index.html  install.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: precommit.yml  publish_mkdocs.yaml  tests.yml
contributing/: dev_tools.html  documentation.html
docs/: gen_ref_pages.py  index.md  install.md
docs/contributing/: dev_tools.md  documentation.md
docs/references/: auto_doc_tools.md  cli_api_reference.md
docs/stylesheets/: extra.css
docs/tutorials/: docker.md  testing.md
project_name/: config.py  main.py  utils.py
project_name/app/: main.py
project_name/data/: main.py
project_name/model/: main.py
reference/: SUMMARY.html
reference/project_name/: config.html  index.html  main.html  utils.html
reference/project_name/app/: index.html  main.html
reference/project_name/data/: index.html  main.html
reference/project_name/model/: index.html  main.html
references/: auto_doc_tools.html  cli_api_reference.html
search/: search_index.json
tests/app/: test_main.py
tests/project_name/: test_cli.py  test_config.py
tests/project_name/app/: test_main.py
tutorials/: docker.html  testing.html
