[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project_name"
version = "0.0.1"
description = "Template to build industrialized data science projets."
authors = [
  {name = "Firstname Lastname", email = "me@email.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.15.2",
  "pydantic>=2.0.1",
  "pydantic-settings>=2.0.0",
  "loguru>=0.7.3",
  "fastapi[standard]>=0.115.12",
]

[project.optional-dependencies]
dev = [
  "ipdb>=0.13.11",
  "pytest>=7.2.0",
  "pytest-sugar>=0.9.6",
  "pytest-mock>=3.10.0",
  "pytest-cov>=6.1.0",
  "ruff>=0.11.2",
  "pre-commit>=4.2.0",
  "pre-commit-hooks>=5.0.0",
]
docs = [
  "mkdocs>=1.4.2",
  "mkdocstrings[python]>=0.29.1",
  "mkdocs-material>=9.0.11",
  "mkdocs-typer>=0.0.2",
  "mkdocs-bootstrap>=1.1",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.0",
  "mkdocs-section-index>=0.3.5"
]

[project.scripts]
project-name = "project_name.main:app"

[tool.hatch.build.targets.wheel]
packages = ["project_name"]

[tool.pytest.ini_options]
addopts = "--cov=project_name"
